m/src/dev/chart/templates/deployment-www.yaml
# managed by Cue
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: src--dev
  labels:
    app: www
  name: www
spec:
  replicas: 3
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
        - name: www
          image: nginx:latest
          ports:
            - containerPort: 80
