m/src/dev/chart/templates/service-app.yaml
# managed by Cue
apiVersion: v1
kind: Service
metadata:
  namespace: src--dev
  name: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
