m/src/dev/chart/templates/ingress.yaml
# managed by Cue
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: app
spec:
  ingressClassName: traefik
  rules:
    - host: src--dev.district.amanibhavam.defn.run
      http:
        paths:
          - backend:
              service:
                name: www
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: src--dev.district.amanibhavam.defn.run
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 80
            path: /api
            pathType: Prefix
